--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^1.1.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.11.5",
+    "json-bigint": "^1.0.0",
+    "lodash": "^4.17.21",
     "vant": "^2.12.50",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
